# turbotoken

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PRD.md  README.md  build.zig  build.zig.zon  package.json  pyproject.toml  test_crc32.zig
.github/workflows/: benchmark.yml  ci.yml  pages.yml  release-readiness.yml  wasm.yml  wheels.yml  x86-ondemand.yml
.hypothesis/constants/: 98e624385ebd2e2a  a29ca9848868560d  c722e5a7383dc01d  d793e059629eaf83
asm/arm64/: hash_crc32.S  neon_decoder.S  neon_pretokenizer.S  sme_pretokenizer.S
asm/riscv/: rvv_decoder.S  rvv_pretokenizer.S
asm/x86_64/: avx2_pretokenizer.S  avx512_pretokenizer.S  hash_crc32.S
bench/: ci-gates.json
bench/.locks/local-machine/: owner.json
bench/.locks/runtime-local-machine/: owner.json
bench/browser/: wasm-competitors.html  wasm-competitors.mjs
bench/charts/: ralph-loop.md  scorecard.md  summary.md
bench/fixtures/: chat-sample.json  cjk-10kb.txt  code-50kb.py  emoji-10kb.txt  english-100kb.tokens.json  english-100kb.txt  english-10kb.txt  english-1kb.txt  english-1mb.tokens.json  english-1mb.txt  unicode-1mb.txt
bench/results/pkg-downloads/: tiktoken-0.12.0-cp314-cp314-macosx_11_0_arm64.whl
c/: CMakeLists.txt  README.md
c/examples/: count_example.c
c/tests/: test_encode.c
cli/: build.zig  build.zig.zon
cli/src/: args.zig  commands.zig  main.zig  output.zig
cli/tests/: cli_test.zig
cpp/src/: encoding.cpp  registry.cpp
csharp/: ChatTemplate.cs  RankCache.cs  Registry.cs  TurboToken.cs
csharp/Tests/: EncodingTests.cs
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMPETITORS.md  MODAL-CUDA.md  MONOREPO.md  OPTIMIZATION-EXPERIMENTS.md  PRD.md  PROGRESS.md  PUBLISHING.md  RESEARCH.md  UPSTREAM-SYNC.md  WASM-EXPLORATION.md  blog-post.md  launch-hn.md  launch-x-thread.md  metal-gpu.md  zig-wasm.md
elixir/: Makefile
elixir/test/: turbotoken_test.exs
flutter/lib/: turbotoken.dart
flutter/test/: encoding_test.dart
gleam/src/: turbotoken.gleam
go/: chat.go  rank_cache.go
gpu/cuda/: batch_count.cu  batch_encode.cu
gpu/metal/: batch_count.metal  batch_encode.metal  metal_bridge.m
include/: turbotoken.h
jni/: turbotoken_jni.c
js/src/: encoding.ts  index.ts  wasm-loader.ts
js/tests/: smoke.test.ts
lua/: turbotoken-dev-1.rockspec
nif/: turbotoken_nif.c
php/src/: Encoding.php  TurboToken.php  TurboTokenException.php
python/tests/: test_batch.py  test_benchmark.py  test_cli.py  test_compatibility.py  test_edge_cases.py  test_encoding.py  test_gpu_bridge.py  test_gpu_chunked_bpe.py  test_native_bridge.py  test_rank_files.py  test_tiktoken_parity_fuzz.py  test_training.py
python/turbotoken/: __init__.py  _gpu.py  _native.py  _rank_files.py  _registry.py  cli.py  core.py  training.py
react-native/: tsconfig.json
react-native/__tests__/: TurboToken.test.ts
react-native/ios/: TurboTokenModule.h
react-native/src/: TurboToken.ts
ruby/lib/: turbotoken.rb
ruby/spec/: encoding_spec.rb
rust/: Cargo.toml
rust/src/: chat.rs  error.rs  lib.rs  rank_cache.rs
rust/tests/: parity_test.rs
scripts/: _bench.ts  _fixtures.ts  _lib.ts  bench-all.ts  bench-bigfile.ts  bench-binary-size.ts  bench-boundary-classifier.ts  bench-browser-competitors.ts  bench-chat.ts  bench-comparison.ts  bench-competitors-stable.ts  bench-competitors.ts  bench-count.ts  bench-cuda-bpe-prototype.ts  bench-decode.ts  bench-encode.ts  bench-encoder-queue.ts  bench-gpu-bpe-direct.ts  bench-gpu-crossover.ts  bench-gpu-direct-stability.ts  bench-gpu-direct-sweep.ts  bench-gpu-host-overhead.ts  bench-gpu-knob-sweep.ts  bench-gpu-memory-cuda.ts  bench-gpu-memory.ts  bench-gpu-overlap.ts  bench-gpu.ts  bench-js-backends.ts  bench-lock-status.ts  bench-medium-pieces.ts  bench-native-byte-path.ts  bench-native-pretokenizer.ts  bench-pair-cache-hash.ts  bench-parallel.ts  bench-ram.ts  bench-scalar-fallback.ts  bench-scorecard.ts  bench-startup.ts  bench-throughput.ts  bench-training.ts  (+31 more)
scripts/modal/: bench_cuda_modal.py
shared/: test-vectors.json
site/: index.html
src/: decoder.zig  encoder.zig  exports.zig  hash.zig  main.zig  main_wasm_npm.zig  pair_cache.zig  pretokenizer.zig  rank_loader.zig  trainer.zig
src/arch/: aarch64.zig  generic.zig  wasm.zig  x86_64.zig
wrappers/: README.md  release-matrix.json
wrappers/c/: CMakeLists.txt  README.md  turbotoken.pc.in
wrappers/c/examples/: chat_example.c  encode_example.c
wrappers/clojure/: README.md  project.clj
wrappers/cpp/: CMakeLists.txt  README.md
wrappers/cpp/include/turbotoken/: chat.hpp  error.hpp  registry.hpp
wrappers/cpp/src/: rank_cache.cpp
wrappers/cpp/tests/: encoding_test.cpp
wrappers/csharp/: Encoding.cs  NativeMethods.cs  README.md  TurboToken.csproj  TurboTokenException.cs
wrappers/deno/: README.md  chat.ts  deno.json  encoding.ts  ffi.ts  jsr.json  mod.ts  rank_cache.ts  registry.ts  turbotoken.ts
wrappers/elixir/: LICENSE  Makefile  README.md  mix.exs
wrappers/flutter/: README.md  pubspec.yaml
wrappers/fsharp/: Chat.fs  Encoding.fs  NativeMethods.fs  README.md  RankCache.fs  Registry.fs  TurboToken.FSharp.fsproj  TurboToken.fs
wrappers/gleam/: README.md  gleam.toml
wrappers/go/: README.md  encoding.go  error.go  ffi.go  go.mod  registry.go  turbotoken.go  turbotoken_test.go
wrappers/groovy/: README.md  build.gradle
wrappers/java/: README.md  pom.xml
wrappers/jni/: README.md
wrappers/js/: README.md
wrappers/julia/: Project.toml  README.md
wrappers/kotlin/: README.md  build.gradle.kts
wrappers/lua/: README.md  turbotoken-dev-1.rockspec
wrappers/mojo/: README.md
wrappers/nif/: README.md
wrappers/php/: README.md  composer.json  phpunit.xml
wrappers/python/: README.md
wrappers/r/: DESCRIPTION  NAMESPACE  README.md
wrappers/react-native/: README.md  package.json  tsconfig.build.json  turbotoken.podspec
wrappers/ruby/: README.md  turbotoken.gemspec
wrappers/rust/: Cargo.toml  README.md  build.rs
wrappers/rust/src/: ffi.rs  registry.rs
wrappers/rust/tests/: encode_test.rs
wrappers/scala/: README.md  build.sbt
wrappers/swift/: Package.swift  README.md
(+158 files in other folders)
