[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "turbotoken"
version = "0.1.0.dev0"
description = "High-performance tiktoken-compatible tokenizer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "turbotoken contributors" }]
dependencies = [
  "typing-extensions>=4.15.0; python_version < '3.11'",
  "cffi>=2.0.0",
  "regex>=2026.1.15"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "hypothesis>=6.141.1",
]

[project.scripts]
turbotoken = "turbotoken.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python/turbotoken"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
