[package]
name = "turbotoken"
version = "0.1.0"
edition = "2021"
description = "The fastest BPE tokenizer on every platform — Rust binding"
license = "MIT"
links = "turbotoken"

[dependencies]
ureq = "2"
dirs = "5"

[build-dependencies]
bindgen = { version = "0.71", optional = true }

[features]
default = []
bindgen = ["dep:bindgen"]
