[package]
name = "turbotoken"
version = "0.1.0"
edition = "2021"
description = "The fastest BPE tokenizer on every platform — Rust binding"
license = "MIT"
repository = "https://github.com/turbotoken/turbotoken"
homepage = "https://github.com/turbotoken/turbotoken/tree/main/wrappers/rust"
documentation = "https://docs.rs/turbotoken"
readme = "README.md"
keywords = ["tokenizer", "bpe", "tiktoken", "zig", "ffi"]
categories = ["text-processing", "api-bindings"]
links = "turbotoken"

[dependencies]
ureq = "2"
dirs = "5"

[build-dependencies]
bindgen = { version = "0.71", optional = true }

[features]
default = []
bindgen = ["dep:bindgen"]
